@@ -29,6 +29,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Added possibility to link a Plone user to a contacts person (using field person.userid).
   Added method get_contact_infos to the document generation helper view so for example when an advice creator is linked to a person,
   we may use a particular held_position to render signatory infos
+- Use _evaluateExpression from collective.behavior.talcondition everywhere to evaluate TAL expressions
 
 4.1b16 (2019-01-31)
 -------------------
